src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/overloaded_functions.sol
contract test {
  function fun(uint a) returns(uint r) { return a; }
  function fun(uint a, uint b) returns(uint r) { return a + b; }
}