src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/local_const_variable.sol
contract Foo {
  function localConst() returns (uint ret)
  {
    uint constant local = 4;
    return local;
  }